# ex3Start

./: CMakeLists.txt  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  minCircle.cpp  minCircle.h  timeseries.cpp
